--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,8 @@
   <properties>
     <jetty.version>9.4.3.v20170317</jetty.version>
     <owasp.depcheck.version>1.4.5</owasp.depcheck.version>
+    <zap.plugin.version>0.1.0</zap.plugin.version>
+    <findbugs.plugin.version>3.0.4</findbugs.plugin.version>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <dependency.check.report.dir>${project.build.directory}/dependency-check</dependency.check.report.dir>
     <sonar.dependencyCheck.reportPath>${dependency.check.report.dir}/dependency-check-report.xml</sonar.dependencyCheck.reportPath>
@@ -207,7 +209,7 @@
       <plugin>
           <groupId>de.martinreinhardt-online</groupId>
           <artifactId>zap-maven-plugin</artifactId>
-          <version>0.1.0</version>
+          <version>${zap.plugin.version}</version>
           <configuration>
             <zapPort>9090</zapPort>
             <targetUrl>http://localhost:8080/</targetUrl>
@@ -221,11 +223,11 @@
           </configuration>
           <executions>
             <execution>
-          			<id>start-zap</id>
-          			<phase>pre-integration-test</phase>
-          			<goals>
-                  <goal>startZap</goal>
-                </goals>
+        			<id>start-zap</id>
+        			<phase>pre-integration-test</phase>
+        			<goals>
+                <goal>startZap</goal>
+              </goals>
           	</execution>
             <execution>
         			<id>analyze</id>
@@ -246,7 +248,7 @@
       <plugin>
         <groupId>org.codehaus.mojo</groupId>
         <artifactId>findbugs-maven-plugin</artifactId>
-        <version>3.0.4</version>
+        <version>${findbugs.plugin.version}</version>
         <configuration>
           <effort>Max</effort>
           <threshold>Low</threshold>
