--- a/pom.xml
+++ b/pom.xml
@@ -15,7 +15,6 @@
     <spotbugs.plugin.version>3.1.0-RC8</spotbugs.plugin.version>
     <findsecbugs.plugin.version>1.7.1</findsecbugs.plugin.version>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <zap.location>${env.ZAP_PATH}</zap.location>
     <dependency.check.report.dir>${project.build.directory}/dependency-check</dependency.check.report.dir>
     <sonar.dependencyCheck.reportPath>${dependency.check.report.dir}/dependency-check-report.xml</sonar.dependencyCheck.reportPath>
   </properties>
@@ -226,7 +225,7 @@
           <configuration>
             <zapPort>9090</zapPort>
             <targetUrl>http://localhost:8080/</targetUrl>
-            <zapPath>${zap.location}</zapPath>
+            <zapPath>${zap.path}</zapPath>
             <authenticationType>form</authenticationType>
         		<username>jperez</username>
         		<password>123</password>
@@ -253,24 +252,19 @@
       </plugin>
 
       <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-enforcer-plugin</artifactId>
-        <version>3.0.0-M1</version>
+        <groupId>org.codehaus.mojo</groupId>
+        <artifactId>properties-maven-plugin</artifactId>
+        <version>1.0.0</version>
         <executions>
           <execution>
-            <id>enforce-files-exist</id>
+            <phase>initialize</phase>
             <goals>
-              <goal>enforce</goal>
+              <goal>read-project-properties</goal>
             </goals>
             <configuration>
-              <rules>
-                <requireFilesExist>
-                  <files>
-                   <file>${zap.location}</file>
-                  </files>
-                </requireFilesExist>
-              </rules>
-              <fail>true</fail>
+              <files>
+                <file>${basedir}/env.properties</file>
+              </files>
             </configuration>
           </execution>
         </executions>
