--- a/pom.xml
+++ b/pom.xml
@@ -223,6 +223,10 @@
         <configuration>
           <format>XML</format>
           <outputDirectory>${dependency.check.report.dir}</outputDirectory>
+          <cveUrl12Modified>https://nvd.nist.gov/download/nvdcve-Modified.xml.gz</cveUrl12Modified>
+          <cveUrl20Modified>https://nvd.nist.gov/feeds/xml/cve/2.0/nvdcve-2.0-modified.xml.gz</cveUrl20Modified>
+          <cveUrl12Base>https://nvd.nist.gov/download/nvdcve-%d.xml.gz</cveUrl12Base>
+          <cveUrl20Base>https://nvd.nist.gov/feeds/xml/cve/2.0/nvdcve-2.0-%d.xml.gz</cveUrl20Base>
         </configuration>
       </plugin>
 
