--- a/pom.xml
+++ b/pom.xml
@@ -15,7 +15,7 @@
         <spotbugs.plugin.version>3.1.0-RC8</spotbugs.plugin.version>
         <findsecbugs.plugin.version>1.7.1</findsecbugs.plugin.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <sonar.dependencyCheck.reportPath>${project.build.directory}/dependency-check/dependency-check-report.xml</sonar.dependencyCheck.reportPath>
+        <sonar.dependencyCheck.reportPath>${project.build.directory}/dependency-check-report.xml</sonar.dependencyCheck.reportPath>
         <sonar.dependencyCheck.htmlReportPath>${project.build.directory}/site/dependency-check-report.html</sonar.dependencyCheck.htmlReportPath>
         <sonar.zaproxy.reportPath>${project.build.directory}/zap-reports/zapReport.xml</sonar.zaproxy.reportPath>
     </properties>
@@ -210,8 +210,7 @@
                     <password>123</password>
                     <loginUrl>http://localhost:8080/Login</loginUrl>
                     <loggedInRegex><![CDATA[\Q<p>Usuario:\E]]></loggedInRegex>
-                    <zapOptions>-daemon -config scanner.strength=INSANE -config api.disablekey=true -config
-                        api.incerrordetails=true -config proxy.ip=0.0.0.0
+                    <zapOptions>-daemon -config scanner.strength=INSANE -config api.disablekey=true -config api.incerrordetails=true -config proxy.ip=0.0.0.0
                     </zapOptions>
                 </configuration>
                 <executions>
