--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
         <jetty.version>9.4.6.v20170531</jetty.version>
         <owasp.depcheck.version>3.1.1</owasp.depcheck.version>
         <zap.plugin.version>0.1.0</zap.plugin.version>
-        <spotbugs.plugin.version>3.1.0-RC8</spotbugs.plugin.version>
+        <spotbugs.plugin.version>3.1.1</spotbugs.plugin.version>
         <findsecbugs.plugin.version>1.7.1</findsecbugs.plugin.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <sonar.dependencyCheck.reportPath>${project.build.directory}/dependency-check-report.xml</sonar.dependencyCheck.reportPath>
